[package]
name = "keybot"
version = "0.1.0"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1", default-features = false, features = ["std", "perf"] }
log = ">=0.4"
chrono = ">=0.4"
serde_json = ">=1.0"
reqwest = { version = ">=0.10", features = ["blocking", "json"] }
uuid = { version = ">=0.8", features = ["v1"] }
