[package]
name = "keybot"
version = "0.1.0"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
regex = { version = "1", default-features = false, features = ["std", "perf"] }
log = ">=0.4"
env_logger = ">=0.7"
chrono = ">=0.4"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
tokio = { version = ">=0.2", features = ["macros", "time"] }
reqwest = { version = ">=0.10", features = ["blocking", "json"] }
uuid = { version = ">=0.8", features = ["v1"] }
toml = ">=0.5"
telegram-bot = ">=0.7"
futures = ">=0.3"
rand = ">=0.7"
tempfile = ">=3.1"
clap = ">=2.33"
